# vf-sqlite-graphql

./: .gitignore  Cargo.nix  Cargo.toml  do  flake.nix  module.nix  package.nix  sqlx-data.json
migrations/: 20210703142519_create_agents_plans.down.sql  20210703142519_create_agents_plans.up.sql  20210703142519_create_plans.down.sql  20210703142519_create_plans.up.sql  20210714063503_create_labels.down.sql  20210714063503_create_labels.up.sql  20210721073159_create_processes.down.sql  20210721073159_create_processes.up.sql  20210727100731_unique_process_labels.down.sql  20210727100731_unique_process_labels.up.sql  20210731093848_create_actions.down.sql  20210731093848_create_actions.up.sql  20210731095258_create_units.up.sql  20210807082744_create_resource_specifications.down.sql  20210807082744_create_resource_specifications.up.sql  20210809061559_create_commitments.down.sql  20210809061559_create_commitments.up.sql  20211112152453_create_agent_relations.down.sql  20211112152453_create_agent_relations.up.sql  99999999999999_seed.up.sql
seeds/: disco.sql  sensorica.sql
src/: main.rs  schema.rs
src/schema/: mod.rs  mutation.rs  query.rs
