[package]
name = "backend"
version = "0.1.0"
authors = ["happysalada <raphael@megzari.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
futures = "0.3.17"
juniper = "0.15.7"
lazy_static = "1.4.0"
log = "0.4.14"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
sqlx = { version = "0.5.9", features = ["sqlite", "runtime-tokio-native-tls", "macros", "migrate"] }
tokio = "1.12.0"
trillium = "0.2.1"
trillium-logger = "0.4.0"
trillium-router = "0.3.0"
trillium-tokio = "0.2.0"
ulid = { version = "0.4.1", features = ["serde"] }

[dev-dependencies]
trillium-testing = { version = "0.3.1", default-features = false, features = ["tokio"] }
